// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserStoryDisplayer Displays a closed user story with accessibility 1`] = `
<div
  class="element-card element-card-fiesta-red element-card-background-lake-placid-blue element-card-with-accessibility element-card-closed"
>
  <div
    class="element-card-content"
  >
    <div
      class="element-card-xref-label"
    >
      <a
        class="element-card-xref element-card-xref-fiesta-red"
        href="/plugins/tracker/?aid=14"
      >
        <span
          aria-hidden="true"
        >
          
        </span>
        
                project
                
        <i
          class="fas fa-fw fa-long-arrow-alt-right"
        />
        
                us #14
            
      </a>
       
      <span
        class="element-card-label"
      >
        My US
      </span>
    </div>
  </div>
   
  <div
    class="element-card-accessibility"
  />
</div>
`;

exports[`UserStoryDisplayer Displays user story with accessibility 1`] = `
<div
  class="element-card element-card-fiesta-red element-card-background-lake-placid-blue element-card-with-accessibility"
>
  <div
    class="element-card-content"
  >
    <div
      class="element-card-xref-label"
    >
      <a
        class="element-card-xref element-card-xref-fiesta-red"
        href="/plugins/tracker/?aid=14"
      >
        <span
          aria-hidden="true"
        >
          
        </span>
        
                project
                
        <i
          class="fas fa-fw fa-long-arrow-alt-right"
        />
        
                us #14
            
      </a>
       
      <span
        class="element-card-label"
      >
        My US
      </span>
    </div>
  </div>
   
  <div
    class="element-card-accessibility"
  />
</div>
`;

exports[`UserStoryDisplayer Displays user story without accessibility 1`] = `
<div
  class="element-card element-card-fiesta-red element-card-background-lake-placid-blue"
>
  <div
    class="element-card-content"
  >
    <div
      class="element-card-xref-label"
    >
      <a
        class="element-card-xref element-card-xref-fiesta-red"
        href="/plugins/tracker/?aid=14"
      >
        <span
          aria-hidden="true"
        >
          
        </span>
        
                project
                
        <i
          class="fas fa-fw fa-long-arrow-alt-right"
        />
        
                us #14
            
      </a>
       
      <span
        class="element-card-label"
      >
        My US
      </span>
    </div>
  </div>
   
  <!---->
</div>
`;
